@@ -1,3 +1,12 @@
+Fri Apr 15 23:42:00 2016  Kenta Murata  <mrkn@mrkn.jp>
+
+	* rational.c (rb_rational_add): rename from nurat_add.
+
+	* array.c (rb_ary_sum): use rb_rational_add directly.
+
+	* test/ruby/test_array.rb (test_sum): add assertions for an array of
+	  Rational values.
+
 Fri Apr 15 22:31:00 2016  Kenta Murata  <mrkn@mrkn.jp>
 
 	* array.c (rb_ary_sum): apply the precision compensated algorithm
